Move XeTeX primitives to \tex_... namespace

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1870,14 +1870,14 @@
   {
     \int_zero:N \l_image_page_int
     \tl_clear:N \l_image_pagebox_tl
-    \@@_image_getbb_auxi:nN {#1} \xetex_picfile:D
+    \@@_image_getbb_auxi:nN {#1} \tex_XeTeXpicfile:D
   }
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
     \tl_clear:N \l_image_decode_tl
     \bool_set_false:N \l_image_interpolate_bool
-    \@@_image_getbb_auxi:nN {#1} \xetex_pdffile:D
+    \@@_image_getbb_auxi:nN {#1} \tex_XeTeXpdffile:D
   }
 \cs_new_protected:Npn \@@_image_getbb_auxi:nN #1#2
   {
@@ -1928,13 +1928,13 @@
 %
 % \begin{macro}{\@@_image_include_pdf:n}
 %   For PDF images, properly supporting the |pagebox| concept in \XeTeX{}
-%   is best done using the |\xetex_pdffile:D| primitive. The syntax here
+%   is best done using the |\tex_XeTeXpdffile:D| primitive. The syntax here
 %   is the same as for the image measurement part, although we know at this
 %   stage that there must be some valid setting for \cs{l_image_pagebox_tl}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_include_pdf:n #1
   {
-    \xetex_pdffile:D "#1" ~
+    \tex_XeTeXpdffile:D "#1" ~
       \int_compare:nNnT \l_image_page_int > 0
         { page~ \int_use:N \l_image_page_int }
       \@@_image_getbb_auxiv:VnNnn \l_image_pagebox_tl
