Move LuaTeX primitives to \tex_... namespace

--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -1250,12 +1250,12 @@
   {
     \cs_set:Npn \@@_str_if_eq_x:nn #1#2
       {
-        \luatex_directlua:D
+        \tex_directlua:D
           {
             l3kernel.strcmp
               (
-                " \luatex_luaescapestring:D {#1}",
-                " \luatex_luaescapestring:D {#2}"
+                " \tex_luaescapestring:D {#1}",
+                " \tex_luaescapestring:D {#2}"
               )
           }
       }
