--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -222,7 +222,7 @@
 %    \begin{macrocode}
 \str_const:Nx \c_sys_engine_str
   {
-    \cs_if_exist:NT \luatex_luatexversion:D { luatex }
+    \cs_if_exist:NT \tex_luatexversion:D { luatex }
     \cs_if_exist:NT \tex_pdftexversion:D { pdftex }
     \cs_if_exist:NT \ptex_kanjiskip:D
       {
