--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -627,7 +627,7 @@
 %   comparison requires this.
 %    \begin{macrocode}
 \cs_new:Npn \@@_str_cmp_x:nn #1#2 { \tex_strcmp:D {#1} {#2} }
-\cs_if_exist:NT \luatex_luatexversion:D
+\cs_if_exist:NT \tex_luatexversion:D
   {
     \cs_set:Npn \@@_str_cmp_x:nn #1#2
       {
