--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -731,11 +731,11 @@
   {
     \cs_gset:Npn \__msg_expandable_warning:n #1
       {
-        \luatex_directlua:D
+        \tex_directlua:D
           {
             texio.write_nl
               ( "
-                \luatex_luaescapestring:D
+                \tex_luaescapestring:D
                   {
                     l. \int_use:N \tex_inputlineno:D \c_space_tl
                     LaTeX3~ warning:~ \tl_to_str:n {#1}
@@ -753,13 +753,13 @@
   {
     \cs_gset:Npx \__msg_expandable_error:n #1
       {
-        \exp_not:N \luatex_directlua:D
+        \exp_not:N \tex_directlua:D
           \exp_not:N \use:n
             {
               {
                 tex.error
                   ( "
-                    \exp_not:N \luatex_luaescapestring:D
+                    \exp_not:N \tex_luaescapestring:D
                       { \exp_not:N \tl_to_str:n { LaTeX3~error:~#1} }
                   " )
                 \prg_replicate:nn { 50 } { ~ }
