--- a/l3kernel/l3alloc.dtx
+++ b/l3kernel/l3alloc.dtx
@@ -124,7 +124,7 @@
 %   At present there are no \pkg{expl3} allocators for these concepts so the
 %   names and numbers of the tracking variables may change.
 %    \begin{macrocode}
-\tex_ifdefined:D \luatex_luatexversion:D
+\tex_ifdefined:D \tex_luatexversion:D
   \tex_global:D \tex_countdef:D \g_@@_attribute_int  = 21 ~
   \tex_global:D \tex_countdef:D \g_@@_bytecode_int   = 22 ~
   \tex_global:D \tex_countdef:D \g_@@_chunkname_int  = 23 ~
@@ -141,7 +141,7 @@
 \cs_new_protected:Npx \box_new:N #1
   {
     \exp_not:N \@@_reg:nNnN { box }
-      \cs_if_exist:NTF \luatex_luatexversion:D
+      \cs_if_exist:NTF \tex_luatexversion:D
         { \tex_chardef:D }
         { \tex_mathchardef:D }
       \c_max_register_int
