--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1044,10 +1044,10 @@
 %   such tokens.
 %    \begin{macrocode}
 \cs_new:Npn \@@_if_eq_x:nn #1#2 { \tex_strcmp:D {#1} {#2} }
-\cs_if_exist:NT \luatex_luatexversion:D
+\cs_if_exist:NT \tex_luatexversion:D
    {
-     \cs_set_eq:NN \lua_escape_x:n \luatex_luaescapestring:D
-     \cs_set_eq:NN \lua_now_x:n    \luatex_directlua:D
+     \cs_set_eq:NN \lua_escape_x:n \tex_luaescapestring:D
+     \cs_set_eq:NN \lua_now_x:n    \tex_directlua:D
      \cs_set:Npn \@@_if_eq_x:nn #1#2
        {
           \lua_now_x:n
