Move UTeX primitives to \tex_... namespace
The change of name of \Umathcharnumdef renamed
leads to the weird pTeX test change. I suspect an
engine issue: there is no obvious reason for this!
(The change is the \BAD which appears, and which
comes from the binary.)

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -67,7 +67,6 @@
 % \begin{itemize}
 %   \item[{\cs[no-index]{tex_\ldots}}] Introduced by \TeX{}, \eTeX{},
 %     \pdfTeX{}, \XeTeX{} and \LuaTeX{};
-%   \item[{\cs[no-index]{utex_\ldots}}] Introduced by \XeTeX{} and \LuaTeX{};
 %   \item[{\cs[no-index]{ptex_\ldots}}] Introduced by \pTeX{};
 %   \item[{\cs[no-index]{uptex_\ldots}}] Introduced by \upTeX{}.
 % \end{itemize}
@@ -915,178 +914,176 @@
 % The set of Unicode math primitives were introduced by \XeTeX{} and \LuaTeX{}
 % in a somewhat complex fashion: a few first as |\XeTeX...| which were then
 % renamed with \LuaTeX{} having a lot more. These names now all start
-% |\U...| and mainly |\Umath...|. To keep things somewhat clear we therefore
-% prefix all of these as |\utex...| (introduced by a Unicode \TeX{} engine)
-% and drop |\U(math)| from the names. Where there is a related \TeX{}90
-% primitive or where it really seems required we keep the |math| part of the name.
+% |\U...| and mainly |\Umath...|.
 %    \begin{macrocode}
-  \@@_primitive:NN \Uchar                 \utex_char:D
-  \@@_primitive:NN \Ucharcat              \utex_charcat:D
-  \@@_primitive:NN \Udelcode              \utex_delcode:D
-  \@@_primitive:NN \Udelcodenum           \utex_delcodenum:D
-  \@@_primitive:NN \Udelimiter            \utex_delimiter:D
-  \@@_primitive:NN \Udelimiterover        \utex_delimiterover:D
-  \@@_primitive:NN \Udelimiterunder       \utex_delimiterunder:D
-  \@@_primitive:NN \Uhextensible          \utex_hextensible:D
-  \@@_primitive:NN \Umathaccent           \utex_mathaccent:D
-  \@@_primitive:NN \Umathaxis             \utex_mathaxis:D
-  \@@_primitive:NN \Umathbinbinspacing    \utex_binbinspacing:D
-  \@@_primitive:NN \Umathbinclosespacing  \utex_binclosespacing:D
-  \@@_primitive:NN \Umathbininnerspacing  \utex_bininnerspacing:D
-  \@@_primitive:NN \Umathbinopenspacing   \utex_binopenspacing:D
-  \@@_primitive:NN \Umathbinopspacing     \utex_binopspacing:D
-  \@@_primitive:NN \Umathbinordspacing    \utex_binordspacing:D
-  \@@_primitive:NN \Umathbinpunctspacing  \utex_binpunctspacing:D
-  \@@_primitive:NN \Umathbinrelspacing    \utex_binrelspacing:D
-  \@@_primitive:NN \Umathchar             \utex_mathchar:D
-  \@@_primitive:NN \Umathcharclass        \utex_mathcharclass:D
-  \@@_primitive:NN \Umathchardef          \utex_mathchardef:D
-  \@@_primitive:NN \Umathcharfam          \utex_mathcharfam:D
-  \@@_primitive:NN \Umathcharnum          \utex_mathcharnum:D
-  \@@_primitive:NN \Umathcharnumdef       \utex_mathcharnumdef:D
-  \@@_primitive:NN \Umathcharslot         \utex_mathcharslot:D
-  \@@_primitive:NN \Umathclosebinspacing  \utex_closebinspacing:D
+  \@@_primitive:NN \Uchar                 \tex_Uchar:D
+  \@@_primitive:NN \Ucharcat              \tex_Ucharcat:D
+  \@@_primitive:NN \Udelcode              \tex_Udelcode:D
+  \@@_primitive:NN \Udelcodenum           \tex_Udelcodenum:D
+  \@@_primitive:NN \Udelimiter            \tex_Udelimiter:D
+  \@@_primitive:NN \Udelimiterover        \tex_Udelimiterover:D
+  \@@_primitive:NN \Udelimiterunder       \tex_Udelimiterunder:D
+  \@@_primitive:NN \Uhextensible          \tex_Uhextensible:D
+  \@@_primitive:NN \Umathaccent           \tex_Umathaccent:D
+  \@@_primitive:NN \Umathaxis             \tex_Umathaxis:D
+  \@@_primitive:NN \Umathbinbinspacing    \tex_Umathbinbinspacing:D
+  \@@_primitive:NN \Umathbinclosespacing  \tex_Umathbinclosespacing:D
+  \@@_primitive:NN \Umathbininnerspacing  \tex_Umathbininnerspacing:D
+  \@@_primitive:NN \Umathbinopenspacing   \tex_Umathbinopenspacing:D
+  \@@_primitive:NN \Umathbinopspacing     \tex_Umathbinopspacing:D
+  \@@_primitive:NN \Umathbinordspacing    \tex_Umathbinordspacing:D
+  \@@_primitive:NN \Umathbinpunctspacing  \tex_Umathbinpunctspacing:D
+  \@@_primitive:NN \Umathbinrelspacing    \tex_Umathbinrelspacing:D
+  \@@_primitive:NN \Umathchar             \tex_Umathchar:D
+  \@@_primitive:NN \Umathcharclass        \tex_Umathcharclass:D
+  \@@_primitive:NN \Umathchardef          \tex_Umathchardef:D
+  \@@_primitive:NN \Umathcharfam          \tex_Umathcharfam:D
+  \@@_primitive:NN \Umathcharnum          \tex_Umathcharnum:D
+  \@@_primitive:NN \Umathcharnumdef       \tex_Umathcharnumdef:D
+  \@@_primitive:NN \Umathcharslot         \tex_Umathcharslot:D
+  \@@_primitive:NN \Umathclosebinspacing  \tex_Umathclosebinspacing:D
   \@@_primitive:NN \Umathcloseclosespacing
-    \utex_closeclosespacing:D
+    \tex_Umathcloseclosespacing:D
   \@@_primitive:NN \Umathcloseinnerspacing
-    \utex_closeinnerspacing:D
-  \@@_primitive:NN \Umathcloseopenspacing \utex_closeopenspacing:D
-  \@@_primitive:NN \Umathcloseopspacing   \utex_closeopspacing:D
-  \@@_primitive:NN \Umathcloseordspacing  \utex_closeordspacing:D
+    \tex_Umathcloseinnerspacing:D
+  \@@_primitive:NN \Umathcloseopenspacing \tex_Umathcloseopenspacing:D
+  \@@_primitive:NN \Umathcloseopspacing   \tex_Umathcloseopspacing:D
+  \@@_primitive:NN \Umathcloseordspacing  \tex_Umathcloseordspacing:D
   \@@_primitive:NN \Umathclosepunctspacing
-    \utex_closepunctspacing:D
-  \@@_primitive:NN \Umathcloserelspacing  \utex_closerelspacing:D
-  \@@_primitive:NN \Umathcode             \utex_mathcode:D
-  \@@_primitive:NN \Umathcodenum          \utex_mathcodenum:D
+    \tex_Umathclosepunctspacing:D
+  \@@_primitive:NN \Umathcloserelspacing  \tex_Umathcloserelspacing:D
+  \@@_primitive:NN \Umathcode             \tex_Umathcode:D
+  \@@_primitive:NN \Umathcodenum          \tex_Umathcodenum:D
   \@@_primitive:NN \Umathconnectoroverlapmin
-    \utex_connectoroverlapmin:D
-  \@@_primitive:NN \Umathfractiondelsize  \utex_fractiondelsize:D
+    \tex_Umathconnectoroverlapmin:D
+  \@@_primitive:NN \Umathfractiondelsize  \tex_Umathfractiondelsize:D
   \@@_primitive:NN \Umathfractiondenomdown
-    \utex_fractiondenomdown:D
+    \tex_Umathfractiondenomdown:D
   \@@_primitive:NN \Umathfractiondenomvgap
-    \utex_fractiondenomvgap:D
-  \@@_primitive:NN \Umathfractionnumup    \utex_fractionnumup:D
-  \@@_primitive:NN \Umathfractionnumvgap  \utex_fractionnumvgap:D
-  \@@_primitive:NN \Umathfractionrule     \utex_fractionrule:D
-  \@@_primitive:NN \Umathinnerbinspacing  \utex_innerbinspacing:D
+    \tex_Umathfractiondenomvgap:D
+  \@@_primitive:NN \Umathfractionnumup    \tex_Umathfractionnumup:D
+  \@@_primitive:NN \Umathfractionnumvgap  \tex_Umathfractionnumvgap:D
+  \@@_primitive:NN \Umathfractionrule     \tex_Umathfractionrule:D
+  \@@_primitive:NN \Umathinnerbinspacing  \tex_Umathinnerbinspacing:D
   \@@_primitive:NN \Umathinnerclosespacing
-    \utex_innerclosespacing:D
+    \tex_Umathinnerclosespacing:D
   \@@_primitive:NN \Umathinnerinnerspacing
-    \utex_innerinnerspacing:D
-  \@@_primitive:NN \Umathinneropenspacing \utex_inneropenspacing:D
-  \@@_primitive:NN \Umathinneropspacing   \utex_inneropspacing:D
-  \@@_primitive:NN \Umathinnerordspacing  \utex_innerordspacing:D
+    \tex_Umathinnerinnerspacing:D
+  \@@_primitive:NN \Umathinneropenspacing \tex_Umathinneropenspacing:D
+  \@@_primitive:NN \Umathinneropspacing   \tex_Umathinneropspacing:D
+  \@@_primitive:NN \Umathinnerordspacing  \tex_Umathinnerordspacing:D
   \@@_primitive:NN \Umathinnerpunctspacing
-    \utex_innerpunctspacing:D
-  \@@_primitive:NN \Umathinnerrelspacing  \utex_innerrelspacing:D
-  \@@_primitive:NN \Umathlimitabovebgap   \utex_limitabovebgap:D
-  \@@_primitive:NN \Umathlimitabovekern   \utex_limitabovekern:D
-  \@@_primitive:NN \Umathlimitabovevgap   \utex_limitabovevgap:D
-  \@@_primitive:NN \Umathlimitbelowbgap   \utex_limitbelowbgap:D
-  \@@_primitive:NN \Umathlimitbelowkern   \utex_limitbelowkern:D
-  \@@_primitive:NN \Umathlimitbelowvgap   \utex_limitbelowvgap:D
-  \@@_primitive:NN \Umathnolimitsubfactor \utex_nolimitsubfactor:D
-  \@@_primitive:NN \Umathnolimitsupfactor \utex_nolimitsupfactor:D
-  \@@_primitive:NN \Umathopbinspacing     \utex_opbinspacing:D
-  \@@_primitive:NN \Umathopclosespacing   \utex_opclosespacing:D
-  \@@_primitive:NN \Umathopenbinspacing   \utex_openbinspacing:D
-  \@@_primitive:NN \Umathopenclosespacing \utex_openclosespacing:D
-  \@@_primitive:NN \Umathopeninnerspacing \utex_openinnerspacing:D
-  \@@_primitive:NN \Umathopenopenspacing  \utex_openopenspacing:D
-  \@@_primitive:NN \Umathopenopspacing    \utex_openopspacing:D
-  \@@_primitive:NN \Umathopenordspacing   \utex_openordspacing:D
-  \@@_primitive:NN \Umathopenpunctspacing \utex_openpunctspacing:D
-  \@@_primitive:NN \Umathopenrelspacing   \utex_openrelspacing:D
-  \@@_primitive:NN \Umathoperatorsize     \utex_operatorsize:D
-  \@@_primitive:NN \Umathopinnerspacing   \utex_opinnerspacing:D
-  \@@_primitive:NN \Umathopopenspacing    \utex_opopenspacing:D
-  \@@_primitive:NN \Umathopopspacing      \utex_opopspacing:D
-  \@@_primitive:NN \Umathopordspacing     \utex_opordspacing:D
-  \@@_primitive:NN \Umathoppunctspacing   \utex_oppunctspacing:D
-  \@@_primitive:NN \Umathoprelspacing     \utex_oprelspacing:D
-  \@@_primitive:NN \Umathordbinspacing    \utex_ordbinspacing:D
-  \@@_primitive:NN \Umathordclosespacing  \utex_ordclosespacing:D
-  \@@_primitive:NN \Umathordinnerspacing  \utex_ordinnerspacing:D
-  \@@_primitive:NN \Umathordopenspacing   \utex_ordopenspacing:D
-  \@@_primitive:NN \Umathordopspacing     \utex_ordopspacing:D
-  \@@_primitive:NN \Umathordordspacing    \utex_ordordspacing:D
-  \@@_primitive:NN \Umathordpunctspacing  \utex_ordpunctspacing:D
-  \@@_primitive:NN \Umathordrelspacing    \utex_ordrelspacing:D
-  \@@_primitive:NN \Umathoverbarkern      \utex_overbarkern:D
-  \@@_primitive:NN \Umathoverbarrule      \utex_overbarrule:D
-  \@@_primitive:NN \Umathoverbarvgap      \utex_overbarvgap:D
+    \tex_Umathinnerpunctspacing:D
+  \@@_primitive:NN \Umathinnerrelspacing  \tex_Umathinnerrelspacing:D
+  \@@_primitive:NN \Umathlimitabovebgap   \tex_Umathlimitabovebgap:D
+  \@@_primitive:NN \Umathlimitabovekern   \tex_Umathlimitabovekern:D
+  \@@_primitive:NN \Umathlimitabovevgap   \tex_Umathlimitabovevgap:D
+  \@@_primitive:NN \Umathlimitbelowbgap   \tex_Umathlimitbelowbgap:D
+  \@@_primitive:NN \Umathlimitbelowkern   \tex_Umathlimitbelowkern:D
+  \@@_primitive:NN \Umathlimitbelowvgap   \tex_Umathlimitbelowvgap:D
+  \@@_primitive:NN \Umathnolimitsubfactor \tex_Umathnolimitsubfactor:D
+  \@@_primitive:NN \Umathnolimitsupfactor \tex_Umathnolimitsupfactor:D
+  \@@_primitive:NN \Umathopbinspacing     \tex_Umathopbinspacing:D
+  \@@_primitive:NN \Umathopclosespacing   \tex_Umathopclosespacing:D
+  \@@_primitive:NN \Umathopenbinspacing   \tex_Umathopenbinspacing:D
+  \@@_primitive:NN \Umathopenclosespacing \tex_Umathopenclosespacing:D
+  \@@_primitive:NN \Umathopeninnerspacing \tex_Umathopeninnerspacing:D
+  \@@_primitive:NN \Umathopenopenspacing  \tex_Umathopenopenspacing:D
+  \@@_primitive:NN \Umathopenopspacing    \tex_Umathopenopspacing:D
+  \@@_primitive:NN \Umathopenordspacing   \tex_Umathopenordspacing:D
+  \@@_primitive:NN \Umathopenpunctspacing \tex_Umathopenpunctspacing:D
+  \@@_primitive:NN \Umathopenrelspacing   \tex_Umathopenrelspacing:D
+  \@@_primitive:NN \Umathoperatorsize     \tex_Umathoperatorsize:D
+  \@@_primitive:NN \Umathopinnerspacing   \tex_Umathopinnerspacing:D
+  \@@_primitive:NN \Umathopopenspacing    \tex_Umathopopenspacing:D
+  \@@_primitive:NN \Umathopopspacing      \tex_Umathopopspacing:D
+  \@@_primitive:NN \Umathopordspacing     \tex_Umathopordspacing:D
+  \@@_primitive:NN \Umathoppunctspacing   \tex_Umathoppunctspacing:D
+  \@@_primitive:NN \Umathoprelspacing     \tex_Umathoprelspacing:D
+  \@@_primitive:NN \Umathordbinspacing    \tex_Umathordbinspacing:D
+  \@@_primitive:NN \Umathordclosespacing  \tex_Umathordclosespacing:D
+  \@@_primitive:NN \Umathordinnerspacing  \tex_Umathordinnerspacing:D
+  \@@_primitive:NN \Umathordopenspacing   \tex_Umathordopenspacing:D
+  \@@_primitive:NN \Umathordopspacing     \tex_Umathordopspacing:D
+  \@@_primitive:NN \Umathordordspacing    \tex_Umathordordspacing:D
+  \@@_primitive:NN \Umathordpunctspacing  \tex_Umathordpunctspacing:D
+  \@@_primitive:NN \Umathordrelspacing    \tex_Umathordrelspacing:D
+  \@@_primitive:NN \Umathoverbarkern      \tex_Umathoverbarkern:D
+  \@@_primitive:NN \Umathoverbarrule      \tex_Umathoverbarrule:D
+  \@@_primitive:NN \Umathoverbarvgap      \tex_Umathoverbarvgap:D
   \@@_primitive:NN \Umathoverdelimiterbgap
-     \utex_overdelimiterbgap:D
+     \tex_Umathoverdelimiterbgap:D
   \@@_primitive:NN \Umathoverdelimitervgap
-    \utex_overdelimitervgap:D
-  \@@_primitive:NN \Umathpunctbinspacing  \utex_punctbinspacing:D
+    \tex_Umathoverdelimitervgap:D
+  \@@_primitive:NN \Umathpunctbinspacing  \tex_Umathpunctbinspacing:D
   \@@_primitive:NN \Umathpunctclosespacing
-    \utex_punctclosespacing:D
+    \tex_Umathpunctclosespacing:D
   \@@_primitive:NN \Umathpunctinnerspacing
-    \utex_punctinnerspacing:D
-  \@@_primitive:NN \Umathpunctopenspacing \utex_punctopenspacing:D
-  \@@_primitive:NN \Umathpunctopspacing   \utex_punctopspacing:D
-  \@@_primitive:NN \Umathpunctordspacing  \utex_punctordspacing:D
-  \@@_primitive:NN \Umathpunctpunctspacing\utex_punctpunctspacing:D
-  \@@_primitive:NN \Umathpunctrelspacing  \utex_punctrelspacing:D
-  \@@_primitive:NN \Umathquad             \utex_quad:D
+    \tex_Umathpunctinnerspacing:D
+  \@@_primitive:NN \Umathpunctopenspacing \tex_Umathpunctopenspacing:D
+  \@@_primitive:NN \Umathpunctopspacing   \tex_Umathpunctopspacing:D
+  \@@_primitive:NN \Umathpunctordspacing  \tex_Umathpunctordspacing:D
+  \@@_primitive:NN \Umathpunctpunctspacing
+    \tex_Umathpunctpunctspacing:D
+  \@@_primitive:NN \Umathpunctrelspacing  \tex_Umathpunctrelspacing:D
+  \@@_primitive:NN \Umathquad             \tex_Umathquad:D
   \@@_primitive:NN \Umathradicaldegreeafter
-    \utex_radicaldegreeafter:D
+    \tex_Umathradicaldegreeafter:D
   \@@_primitive:NN \Umathradicaldegreebefore
-    \utex_radicaldegreebefore:D
+    \tex_Umathradicaldegreebefore:D
   \@@_primitive:NN \Umathradicaldegreeraise
-    \utex_radicaldegreeraise:D
-  \@@_primitive:NN \Umathradicalkern      \utex_radicalkern:D
-  \@@_primitive:NN \Umathradicalrule      \utex_radicalrule:D
-  \@@_primitive:NN \Umathradicalvgap      \utex_radicalvgap:D
-  \@@_primitive:NN \Umathrelbinspacing    \utex_relbinspacing:D
-  \@@_primitive:NN \Umathrelclosespacing  \utex_relclosespacing:D
-  \@@_primitive:NN \Umathrelinnerspacing  \utex_relinnerspacing:D
-  \@@_primitive:NN \Umathrelopenspacing   \utex_relopenspacing:D
-  \@@_primitive:NN \Umathrelopspacing     \utex_relopspacing:D
-  \@@_primitive:NN \Umathrelordspacing    \utex_relordspacing:D
-  \@@_primitive:NN \Umathrelpunctspacing  \utex_relpunctspacing:D
-  \@@_primitive:NN \Umathrelrelspacing    \utex_relrelspacing:D
+    \tex_Umathradicaldegreeraise:D
+  \@@_primitive:NN \Umathradicalkern      \tex_Umathradicalkern:D
+  \@@_primitive:NN \Umathradicalrule      \tex_Umathradicalrule:D
+  \@@_primitive:NN \Umathradicalvgap      \tex_Umathradicalvgap:D
+  \@@_primitive:NN \Umathrelbinspacing    \tex_Umathrelbinspacing:D
+  \@@_primitive:NN \Umathrelclosespacing  \tex_Umathrelclosespacing:D
+  \@@_primitive:NN \Umathrelinnerspacing  \tex_Umathrelinnerspacing:D
+  \@@_primitive:NN \Umathrelopenspacing   \tex_Umathrelopenspacing:D
+  \@@_primitive:NN \Umathrelopspacing     \tex_Umathrelopspacing:D
+  \@@_primitive:NN \Umathrelordspacing    \tex_Umathrelordspacing:D
+  \@@_primitive:NN \Umathrelpunctspacing  \tex_Umathrelpunctspacing:D
+  \@@_primitive:NN \Umathrelrelspacing    \tex_Umathrelrelspacing:D
   \@@_primitive:NN \Umathskewedfractionhgap
-    \utex_skewedfractionhgap:D
+    \tex_Umathskewedfractionhgap:D
   \@@_primitive:NN \Umathskewedfractionvgap
-    \utex_skewedfractionvgap:D
-  \@@_primitive:NN \Umathspaceafterscript \utex_spaceafterscript:D
-  \@@_primitive:NN \Umathstackdenomdown   \utex_stackdenomdown:D
-  \@@_primitive:NN \Umathstacknumup       \utex_stacknumup:D
-  \@@_primitive:NN \Umathstackvgap        \utex_stackvgap:D
-  \@@_primitive:NN \Umathsubshiftdown     \utex_subshiftdown:D
-  \@@_primitive:NN \Umathsubshiftdrop     \utex_subshiftdrop:D
-  \@@_primitive:NN \Umathsubsupshiftdown  \utex_subsupshiftdown:D
-  \@@_primitive:NN \Umathsubsupvgap       \utex_subsupvgap:D
-  \@@_primitive:NN \Umathsubtopmax        \utex_subtopmax:D
-  \@@_primitive:NN \Umathsupbottommin     \utex_supbottommin:D
-  \@@_primitive:NN \Umathsupshiftdrop     \utex_supshiftdrop:D
-  \@@_primitive:NN \Umathsupshiftup       \utex_supshiftup:D
-  \@@_primitive:NN \Umathsupsubbottommax  \utex_supsubbottommax:D
-  \@@_primitive:NN \Umathunderbarkern     \utex_underbarkern:D
-  \@@_primitive:NN \Umathunderbarrule     \utex_underbarrule:D
-  \@@_primitive:NN \Umathunderbarvgap     \utex_underbarvgap:D
+    \tex_Umathskewedfractionvgap:D
+  \@@_primitive:NN \Umathspaceafterscript \tex_Umathspaceafterscript:D
+  \@@_primitive:NN \Umathstackdenomdown   \tex_Umathstackdenomdown:D
+  \@@_primitive:NN \Umathstacknumup       \tex_Umathstacknumup:D
+  \@@_primitive:NN \Umathstackvgap        \tex_Umathstackvgap:D
+  \@@_primitive:NN \Umathsubshiftdown     \tex_Umathsubshiftdown:D
+  \@@_primitive:NN \Umathsubshiftdrop     \tex_Umathsubshiftdrop:D
+  \@@_primitive:NN \Umathsubsupshiftdown  \tex_Umathsubsupshiftdown:D
+  \@@_primitive:NN \Umathsubsupvgap       \tex_Umathsubsupvgap:D
+  \@@_primitive:NN \Umathsubtopmax        \tex_Umathsubtopmax:D
+  \@@_primitive:NN \Umathsupbottommin     \tex_Umathsupbottommin:D
+  \@@_primitive:NN \Umathsupshiftdrop     \tex_Umathsupshiftdrop:D
+  \@@_primitive:NN \Umathsupshiftup       \tex_Umathsupshiftup:D
+  \@@_primitive:NN \Umathsupsubbottommax  \tex_Umathsupsubbottommax:D
+  \@@_primitive:NN \Umathunderbarkern     \tex_Umathunderbarkern:D
+  \@@_primitive:NN \Umathunderbarrule     \tex_Umathunderbarrule:D
+  \@@_primitive:NN \Umathunderbarvgap     \tex_Umathunderbarvgap:D
   \@@_primitive:NN \Umathunderdelimiterbgap
-    \utex_underdelimiterbgap:D
+    \tex_Umathunderdelimiterbgap:D
   \@@_primitive:NN \Umathunderdelimitervgap
-    \utex_underdelimitervgap:D
-  \@@_primitive:NN \Unosubscript          \utex_nosubscript:D
-  \@@_primitive:NN \Unosuperscript        \utex_nosuperscript:D
-  \@@_primitive:NN \Uoverdelimiter        \utex_overdelimiter:D
-  \@@_primitive:NN \Uradical              \utex_radical:D
-  \@@_primitive:NN \Uroot                 \utex_root:D
-  \@@_primitive:NN \Uskewed               \utex_skewed:D
-  \@@_primitive:NN \Uskewedwithdelims     \utex_skewedwithdelims:D
-  \@@_primitive:NN \Ustack                \utex_stack:D
-  \@@_primitive:NN \Ustartdisplaymath     \utex_startdisplaymath:D
-  \@@_primitive:NN \Ustartmath            \utex_startmath:D
-  \@@_primitive:NN \Ustopdisplaymath      \utex_stopdisplaymath:D
-  \@@_primitive:NN \Ustopmath             \utex_stopmath:D
-  \@@_primitive:NN \Usubscript            \utex_subscript:D
-  \@@_primitive:NN \Usuperscript          \utex_superscript:D
-  \@@_primitive:NN \Uunderdelimiter       \utex_underdelimiter:D
-  \@@_primitive:NN \Uvextensible          \utex_vextensible:D
+    \tex_Umathunderdelimitervgap:D
+  \@@_primitive:NN \Unosubscript          \tex_Unosubscript:D
+  \@@_primitive:NN \Unosuperscript        \tex_Unosuperscript:D
+  \@@_primitive:NN \Uoverdelimiter        \tex_Uoverdelimiter:D
+  \@@_primitive:NN \Uradical              \tex_Uradical:D
+  \@@_primitive:NN \Uroot                 \tex_Uroot:D
+  \@@_primitive:NN \Uskewed               \tex_Uskewed:D
+  \@@_primitive:NN \Uskewedwithdelims     \tex_Uskewedwithdelims:D
+  \@@_primitive:NN \Ustack                \tex_Ustack:D
+  \@@_primitive:NN \Ustartdisplaymath     \tex_Ustartdisplaymath:D
+  \@@_primitive:NN \Ustartmath            \tex_Ustartmath:D
+  \@@_primitive:NN \Ustopdisplaymath      \tex_Ustopdisplaymath:D
+  \@@_primitive:NN \Ustopmath             \tex_Ustopmath:D
+  \@@_primitive:NN \Usubscript            \tex_Usubscript:D
+  \@@_primitive:NN \Usuperscript          \tex_Usuperscript:D
+  \@@_primitive:NN \Uunderdelimiter       \tex_Uunderdelimiter:D
+  \@@_primitive:NN \Uvextensible          \tex_Uvextensible:D
 %    \end{macrocode}
 % Primitives from \pTeX{}.
 %    \begin{macrocode}
@@ -1269,7 +1266,7 @@
   \tex_let:D \tex_suppressmathparerror:D
     \luatexsuppressmathparerror
   \tex_let:D \tex_suppressoutererror:D  \luatexsuppressoutererror
-  \tex_let:D \utex_char:D                  \luatexUchar
+  \tex_let:D \tex_Uchar:D                  \luatexUchar
   \tex_let:D \tex_suppressfontnotfounderror:D
     \luatexsuppressfontnotfounderror
 %    \end{macrocode}
@@ -1313,16 +1310,16 @@
 %    \begin{macrocode}
 %<*initex|package>
 \tex_ifdefined:D \XeTeXdelcode
-  \tex_let:D \utex_delcode:D        \XeTeXdelcode
-  \tex_let:D \utex_delcodenum:D     \XeTeXdelcodenum
-  \tex_let:D \utex_delimiter:D      \XeTeXdelimiter
-  \tex_let:D \utex_mathaccent:D     \XeTeXmathaccent
-  \tex_let:D \utex_mathchar:D       \XeTeXmathchar
-  \tex_let:D \utex_mathchardef:D    \XeTeXmathchardef
-  \tex_let:D \utex_mathcharnum:D    \XeTeXmathcharnum
-  \tex_let:D \utex_mathcharnumdef:D \XeTeXmathcharnumdef
-  \tex_let:D \utex_mathcode:D       \XeTeXmathcode
-  \tex_let:D \utex_mathcodenum:D    \XeTeXmathcodenum
+  \tex_let:D \tex_Udelcode:D        \XeTeXdelcode
+  \tex_let:D \tex_Udelcodenum:D     \XeTeXdelcodenum
+  \tex_let:D \tex_Udelimiter:D      \XeTeXdelimiter
+  \tex_let:D \tex_Umathaccent:D     \XeTeXmathaccent
+  \tex_let:D \tex_Umathchar:D       \XeTeXmathchar
+  \tex_let:D \tex_Umathchardef:D    \XeTeXmathchardef
+  \tex_let:D \tex_Umathcharnum:D    \XeTeXmathcharnum
+  \tex_let:D \tex_Umathcharnumdef:D \XeTeXmathcharnumdef
+  \tex_let:D \tex_Umathcode:D       \XeTeXmathcode
+  \tex_let:D \tex_Umathcodenum:D    \XeTeXmathcodenum
 \tex_fi:D
 %    \end{macrocode}
 % Up to v0.80, \LuaTeX{} defines the \pdfTeX{} version data: rather
@@ -1788,6 +1785,173 @@
   \@@_primitive:NN \pardir                \luatex_pardir:D
   \@@_primitive:NN \rightghost            \luatex_rightghost:D
   \@@_primitive:NN \textdir               \luatex_textdir:D
+  \@@_primitive:NN \Uchar                 \utex_char:D
+  \@@_primitive:NN \Ucharcat              \utex_charcat:D
+  \@@_primitive:NN \Udelcode              \utex_delcode:D
+  \@@_primitive:NN \Udelcodenum           \utex_delcodenum:D
+  \@@_primitive:NN \Udelimiter            \utex_delimiter:D
+  \@@_primitive:NN \Udelimiterover        \utex_delimiterover:D
+  \@@_primitive:NN \Udelimiterunder       \utex_delimiterunder:D
+  \@@_primitive:NN \Uhextensible          \utex_hextensible:D
+  \@@_primitive:NN \Umathaccent           \utex_mathaccent:D
+  \@@_primitive:NN \Umathaxis             \utex_mathaxis:D
+  \@@_primitive:NN \Umathbinbinspacing    \utex_binbinspacing:D
+  \@@_primitive:NN \Umathbinclosespacing  \utex_binclosespacing:D
+  \@@_primitive:NN \Umathbininnerspacing  \utex_bininnerspacing:D
+  \@@_primitive:NN \Umathbinopenspacing   \utex_binopenspacing:D
+  \@@_primitive:NN \Umathbinopspacing     \utex_binopspacing:D
+  \@@_primitive:NN \Umathbinordspacing    \utex_binordspacing:D
+  \@@_primitive:NN \Umathbinpunctspacing  \utex_binpunctspacing:D
+  \@@_primitive:NN \Umathbinrelspacing    \utex_binrelspacing:D
+  \@@_primitive:NN \Umathchar             \utex_mathchar:D
+  \@@_primitive:NN \Umathcharclass        \utex_mathcharclass:D
+  \@@_primitive:NN \Umathchardef          \utex_mathchardef:D
+  \@@_primitive:NN \Umathcharfam          \utex_mathcharfam:D
+  \@@_primitive:NN \Umathcharnum          \utex_mathcharnum:D
+  \@@_primitive:NN \Umathcharnumdef       \utex_mathcharnumdef:D
+  \@@_primitive:NN \Umathcharslot         \utex_mathcharslot:D
+  \@@_primitive:NN \Umathclosebinspacing  \utex_closebinspacing:D
+  \@@_primitive:NN \Umathcloseclosespacing
+    \utex_closeclosespacing:D
+  \@@_primitive:NN \Umathcloseinnerspacing
+    \utex_closeinnerspacing:D
+  \@@_primitive:NN \Umathcloseopenspacing \utex_closeopenspacing:D
+  \@@_primitive:NN \Umathcloseopspacing   \utex_closeopspacing:D
+  \@@_primitive:NN \Umathcloseordspacing  \utex_closeordspacing:D
+  \@@_primitive:NN \Umathclosepunctspacing
+    \utex_closepunctspacing:D
+  \@@_primitive:NN \Umathcloserelspacing  \utex_closerelspacing:D
+  \@@_primitive:NN \Umathcode             \utex_mathcode:D
+  \@@_primitive:NN \Umathcodenum          \utex_mathcodenum:D
+  \@@_primitive:NN \Umathconnectoroverlapmin
+    \utex_connectoroverlapmin:D
+  \@@_primitive:NN \Umathfractiondelsize  \utex_fractiondelsize:D
+  \@@_primitive:NN \Umathfractiondenomdown
+    \utex_fractiondenomdown:D
+  \@@_primitive:NN \Umathfractiondenomvgap
+    \utex_fractiondenomvgap:D
+  \@@_primitive:NN \Umathfractionnumup    \utex_fractionnumup:D
+  \@@_primitive:NN \Umathfractionnumvgap  \utex_fractionnumvgap:D
+  \@@_primitive:NN \Umathfractionrule     \utex_fractionrule:D
+  \@@_primitive:NN \Umathinnerbinspacing  \utex_innerbinspacing:D
+  \@@_primitive:NN \Umathinnerclosespacing
+    \utex_innerclosespacing:D
+  \@@_primitive:NN \Umathinnerinnerspacing
+    \utex_innerinnerspacing:D
+  \@@_primitive:NN \Umathinneropenspacing \utex_inneropenspacing:D
+  \@@_primitive:NN \Umathinneropspacing   \utex_inneropspacing:D
+  \@@_primitive:NN \Umathinnerordspacing  \utex_innerordspacing:D
+  \@@_primitive:NN \Umathinnerpunctspacing
+    \utex_innerpunctspacing:D
+  \@@_primitive:NN \Umathinnerrelspacing  \utex_innerrelspacing:D
+  \@@_primitive:NN \Umathlimitabovebgap   \utex_limitabovebgap:D
+  \@@_primitive:NN \Umathlimitabovekern   \utex_limitabovekern:D
+  \@@_primitive:NN \Umathlimitabovevgap   \utex_limitabovevgap:D
+  \@@_primitive:NN \Umathlimitbelowbgap   \utex_limitbelowbgap:D
+  \@@_primitive:NN \Umathlimitbelowkern   \utex_limitbelowkern:D
+  \@@_primitive:NN \Umathlimitbelowvgap   \utex_limitbelowvgap:D
+  \@@_primitive:NN \Umathnolimitsubfactor \utex_nolimitsubfactor:D
+  \@@_primitive:NN \Umathnolimitsupfactor \utex_nolimitsupfactor:D
+  \@@_primitive:NN \Umathopbinspacing     \utex_opbinspacing:D
+  \@@_primitive:NN \Umathopclosespacing   \utex_opclosespacing:D
+  \@@_primitive:NN \Umathopenbinspacing   \utex_openbinspacing:D
+  \@@_primitive:NN \Umathopenclosespacing \utex_openclosespacing:D
+  \@@_primitive:NN \Umathopeninnerspacing \utex_openinnerspacing:D
+  \@@_primitive:NN \Umathopenopenspacing  \utex_openopenspacing:D
+  \@@_primitive:NN \Umathopenopspacing    \utex_openopspacing:D
+  \@@_primitive:NN \Umathopenordspacing   \utex_openordspacing:D
+  \@@_primitive:NN \Umathopenpunctspacing \utex_openpunctspacing:D
+  \@@_primitive:NN \Umathopenrelspacing   \utex_openrelspacing:D
+  \@@_primitive:NN \Umathoperatorsize     \utex_operatorsize:D
+  \@@_primitive:NN \Umathopinnerspacing   \utex_opinnerspacing:D
+  \@@_primitive:NN \Umathopopenspacing    \utex_opopenspacing:D
+  \@@_primitive:NN \Umathopopspacing      \utex_opopspacing:D
+  \@@_primitive:NN \Umathopordspacing     \utex_opordspacing:D
+  \@@_primitive:NN \Umathoppunctspacing   \utex_oppunctspacing:D
+  \@@_primitive:NN \Umathoprelspacing     \utex_oprelspacing:D
+  \@@_primitive:NN \Umathordbinspacing    \utex_ordbinspacing:D
+  \@@_primitive:NN \Umathordclosespacing  \utex_ordclosespacing:D
+  \@@_primitive:NN \Umathordinnerspacing  \utex_ordinnerspacing:D
+  \@@_primitive:NN \Umathordopenspacing   \utex_ordopenspacing:D
+  \@@_primitive:NN \Umathordopspacing     \utex_ordopspacing:D
+  \@@_primitive:NN \Umathordordspacing    \utex_ordordspacing:D
+  \@@_primitive:NN \Umathordpunctspacing  \utex_ordpunctspacing:D
+  \@@_primitive:NN \Umathordrelspacing    \utex_ordrelspacing:D
+  \@@_primitive:NN \Umathoverbarkern      \utex_overbarkern:D
+  \@@_primitive:NN \Umathoverbarrule      \utex_overbarrule:D
+  \@@_primitive:NN \Umathoverbarvgap      \utex_overbarvgap:D
+  \@@_primitive:NN \Umathoverdelimiterbgap
+     \utex_overdelimiterbgap:D
+  \@@_primitive:NN \Umathoverdelimitervgap
+    \utex_overdelimitervgap:D
+  \@@_primitive:NN \Umathpunctbinspacing  \utex_punctbinspacing:D
+  \@@_primitive:NN \Umathpunctclosespacing
+    \utex_punctclosespacing:D
+  \@@_primitive:NN \Umathpunctinnerspacing
+    \utex_punctinnerspacing:D
+  \@@_primitive:NN \Umathpunctopenspacing \utex_punctopenspacing:D
+  \@@_primitive:NN \Umathpunctopspacing   \utex_punctopspacing:D
+  \@@_primitive:NN \Umathpunctordspacing  \utex_punctordspacing:D
+  \@@_primitive:NN \Umathpunctpunctspacing\utex_punctpunctspacing:D
+  \@@_primitive:NN \Umathpunctrelspacing  \utex_punctrelspacing:D
+  \@@_primitive:NN \Umathquad             \utex_quad:D
+  \@@_primitive:NN \Umathradicaldegreeafter
+    \utex_radicaldegreeafter:D
+  \@@_primitive:NN \Umathradicaldegreebefore
+    \utex_radicaldegreebefore:D
+  \@@_primitive:NN \Umathradicaldegreeraise
+    \utex_radicaldegreeraise:D
+  \@@_primitive:NN \Umathradicalkern      \utex_radicalkern:D
+  \@@_primitive:NN \Umathradicalrule      \utex_radicalrule:D
+  \@@_primitive:NN \Umathradicalvgap      \utex_radicalvgap:D
+  \@@_primitive:NN \Umathrelbinspacing    \utex_relbinspacing:D
+  \@@_primitive:NN \Umathrelclosespacing  \utex_relclosespacing:D
+  \@@_primitive:NN \Umathrelinnerspacing  \utex_relinnerspacing:D
+  \@@_primitive:NN \Umathrelopenspacing   \utex_relopenspacing:D
+  \@@_primitive:NN \Umathrelopspacing     \utex_relopspacing:D
+  \@@_primitive:NN \Umathrelordspacing    \utex_relordspacing:D
+  \@@_primitive:NN \Umathrelpunctspacing  \utex_relpunctspacing:D
+  \@@_primitive:NN \Umathrelrelspacing    \utex_relrelspacing:D
+  \@@_primitive:NN \Umathskewedfractionhgap
+    \utex_skewedfractionhgap:D
+  \@@_primitive:NN \Umathskewedfractionvgap
+    \utex_skewedfractionvgap:D
+  \@@_primitive:NN \Umathspaceafterscript \utex_spaceafterscript:D
+  \@@_primitive:NN \Umathstackdenomdown   \utex_stackdenomdown:D
+  \@@_primitive:NN \Umathstacknumup       \utex_stacknumup:D
+  \@@_primitive:NN \Umathstackvgap        \utex_stackvgap:D
+  \@@_primitive:NN \Umathsubshiftdown     \utex_subshiftdown:D
+  \@@_primitive:NN \Umathsubshiftdrop     \utex_subshiftdrop:D
+  \@@_primitive:NN \Umathsubsupshiftdown  \utex_subsupshiftdown:D
+  \@@_primitive:NN \Umathsubsupvgap       \utex_subsupvgap:D
+  \@@_primitive:NN \Umathsubtopmax        \utex_subtopmax:D
+  \@@_primitive:NN \Umathsupbottommin     \utex_supbottommin:D
+  \@@_primitive:NN \Umathsupshiftdrop     \utex_supshiftdrop:D
+  \@@_primitive:NN \Umathsupshiftup       \utex_supshiftup:D
+  \@@_primitive:NN \Umathsupsubbottommax  \utex_supsubbottommax:D
+  \@@_primitive:NN \Umathunderbarkern     \utex_underbarkern:D
+  \@@_primitive:NN \Umathunderbarrule     \utex_underbarrule:D
+  \@@_primitive:NN \Umathunderbarvgap     \utex_underbarvgap:D
+  \@@_primitive:NN \Umathunderdelimiterbgap
+    \utex_underdelimiterbgap:D
+  \@@_primitive:NN \Umathunderdelimitervgap
+    \utex_underdelimitervgap:D
+  \@@_primitive:NN \Unosubscript          \utex_nosubscript:D
+  \@@_primitive:NN \Unosuperscript        \utex_nosuperscript:D
+  \@@_primitive:NN \Uoverdelimiter        \utex_overdelimiter:D
+  \@@_primitive:NN \Uradical              \utex_radical:D
+  \@@_primitive:NN \Uroot                 \utex_root:D
+  \@@_primitive:NN \Uskewed               \utex_skewed:D
+  \@@_primitive:NN \Uskewedwithdelims     \utex_skewedwithdelims:D
+  \@@_primitive:NN \Ustack                \utex_stack:D
+  \@@_primitive:NN \Ustartdisplaymath     \utex_startdisplaymath:D
+  \@@_primitive:NN \Ustartmath            \utex_startmath:D
+  \@@_primitive:NN \Ustopdisplaymath      \utex_stopdisplaymath:D
+  \@@_primitive:NN \Ustopmath             \utex_stopmath:D
+  \@@_primitive:NN \Usubscript            \utex_subscript:D
+  \@@_primitive:NN \Usuperscript          \utex_superscript:D
+  \@@_primitive:NN \Uunderdelimiter       \utex_underdelimiter:D
+  \@@_primitive:NN \Uvextensible          \utex_vextensible:D
 \tex_endgroup:D
 %</package>
 %    \end{macrocode}
