--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1448,7 +1448,7 @@
           {
             #3
             \exp_after:wN \exp_end:
-            \utex_charcat:D #1 \exp_stop_f: #2 \exp_stop_f:
+            \tex_Ucharcat:D #1 \exp_stop_f: #2 \exp_stop_f:
           }
         \cs_new_eq:NN \@@_generate_auxii:nnw \@@_generate_aux:nnw
         \cs_gset:Npn \@@_generate_aux:nnw #1#2#3 \exp_end:
